# SE-Probe

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  deploy-book.yml
_sources/: intro.md
_sources/notebooks/: 01_pipeline_overview.ipynb  02_cka_per_layer.ipynb  03_cross_architectures.ipynb  04_cka_to_pesq.ipynb  05_diffusion.ipynb  05_diffusion_maps.ipynb  06_reverb_probing.ipynb
data/: README.md
docs/: architecture.md
docs/audio_samples/: README.md
notebooks/: 01_pipeline_overview.html  01_pipeline_overview.ipynb  02_cka_per_layer.html  02_cka_per_layer.ipynb  03_cross_architectures.html  03_cross_architectures.ipynb  04_cka_to_pesq.html  04_cka_to_pesq.ipynb  05_diffusion.html  05_diffusion.ipynb  05_diffusion_maps.html  05_diffusion_maps.ipynb  06_reverb_probing.html  06_reverb_probing.ipynb
results_demo/: cka_reverb_muse_demo.parquet  cka_snr_demucs_demo.parquet  cka_snr_mpsenet_demo.parquet  cka_snr_muse_demo.parquet  diffusion_maps_architecture_demo.parquet  diffusion_maps_per_layer_demo.parquet
scripts/: build_demo_subset.py  setup.py
se_probe/: __init__.py  activation_extraction.py  cka.py  consts.py  data_generation.py  device.py  diffusion_analysis.py  diffusion_maps.py  io.py  metrics.py  plotting.py
se_probe/demucs/: __init__.py  consts.py  model.py  pooling.py
se_probe/mpsenet/: __init__.py  consts.py  model.py  pooling.py
se_probe/muse/: __init__.py  consts.py  model.py
se_probe/muse/models/: __init__.py  generator.py  pooling.py
tests/: __init__.py  conftest.py  test_build_demo_subset.py  test_device.py  test_diffusion_maps.py  test_integration.py  test_metrics_import.py  test_plotting.py  test_setup_script.py  test_validation.py
tests/fixtures/: smoke.parquet
training/: .gitignore  README.md  evaluate.py  inference.py  train.py
training/checkpoints/: config.json  g_00051852
training/datasets/: __init__.py  dataset.py  reverb_dataset.py
training/scripts/: generate_test_sets.py  launch_finetune.sh  prepare_rirs.py  prepare_vb_demand.py  split_rirs.py
