[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "se-probe"
version = "0.1.2"
description = "SE-Probe: Probing representations of deep speech enhancement models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Yair Amar"},
    {name = "Amir Ivry"},
    {name = "Israel Cohen"},
]
keywords = [
    "speech-enhancement",
    "interpretability",
    "probing",
    "deep-learning",
    "CKA",
    "diffusion-maps",
    "audio-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0",
    "h5py>=3.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pesq>=0.0.4",
    "pystoi>=0.3.3",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "nbstripout>=0.6.0",
    "pre-commit>=3.0.0",
]
docs = [
    "jupyter-book>=1.0,<2",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.urls]
Homepage = "https://yairamar.github.io/SE-Probe/"
Paper = "https://arxiv.org/abs/2512.00482"
Documentation = "https://yairamar.github.io/SE-Probe/"
Repository = "https://github.com/YairAmar/SE-Probe"
Issues = "https://github.com/YairAmar/SE-Probe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["se_probe*"]

[tool.setuptools.package-data]
se_probe = ["*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    # Vendored upstream model code (unmodified copies; lint cleanup is
    # out of scope and would diverge us from upstream).
    "se_probe/muse/models/",
    "se_probe/mpsenet/",
    "se_probe/demucs/",
    # Vendored training pipeline (github.com/YairAmar/muse-dereverb-ft).
    "training/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Notebook bootstraps require sys.path manipulation before package imports.
"*.ipynb" = ["E402"]
# se_probe.consts exposes VCTK_DIR / DEMAND_NOISE_DIR / AIR_RIR_DIR via
# PEP 562 ``__getattr__`` rather than module-level assignment, so they
# legitimately appear in ``__all__`` without a binding.
"se_probe/consts.py" = ["F822"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
